[gd_scene load_steps=3 format=3 uid="uid://bd8om14255asa"]

[ext_resource type="Texture2D" uid="uid://bikr5bf1575k4" path="res://Textures/iron-dome-resize.png" id="2_oancl"]
[ext_resource type="Script" path="res://scripts/IronDomeButton.gd" id="2_oo2f2"]

[node name="IronDomeButton" type="Button"]
offset_right = 8.0
offset_bottom = 8.0
icon = ExtResource("2_oancl")
script = ExtResource("2_oo2f2")

[node name="coolDownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="timeout" from="coolDownTimer" to="." method="_on_cool_down_timer_timeout"]
